--- a/src/app/components/nabvar/nabvar.component.scss
+++ b/src/app/components/nabvar/nabvar.component.scss
@@ -3,7 +3,7 @@
   position: fixed ;
   padding-right: 20px;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.3); /* Fondo transparente */
+  background-color: rgba(0, 0, 0, 0.8); /* Fondo transparente */
   z-index: 1000  ; /* Asegúrate de que esté por encima de otros elementos */
   transition: all 0.3s ease ; /* Suaviza la transición del tamaño */
   }
@@ -25,10 +25,12 @@
  -ms-border-radius: 20px;
  -o-border-radius: 20px;
 }
-
+.navbar-toggler{
+  background-color: #ffffffe0;
+}
 .dropdown-menu,
 .dropdown-item {
-  background-color: rgba(0, 0, 0, 0.5); /* Fondo negro con 80% de opacidad */
+  background-color: rgba(0, 0, 0, 0.0); /* Fondo negro con 80% de opacidad */
   color: #ffffff;
 }
 .dropdown-item:hover
