--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -27,6 +27,6 @@
     </p>
 
     <!-- Derechos reservados -->
-    <p class="mt-2 mb-0">&copy; 2024 Your Company. All Rights Reserved.</p>
+    <p class="mt-2 mb-0">&copy; 2024 el chapuza contraataca!.</p>
   </div>
 </footer>
