--- a/src/app/components/seccion2/seccion2.component.html
+++ b/src/app/components/seccion2/seccion2.component.html
@@ -37,8 +37,8 @@
             <img src="{{ miembro.imagen }}" class="card-img-top" alt="{{ miembro.nombre }}">
           </div>
           <div class="card-back">
-            <p class="card-text">{{ miembro.cargo }}</p>
-            <p class="card-text">{{ miembro.descripcion }}</p>
+            <p class="card-text cargo">{{ miembro.cargo }}</p>
+            <p class="card-text descripcion">{{ miembro.descripcion }}</p>
           </div>
         </div>
       </div>
