angular animations, and nuestra-manera changes aplication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-
-<router-outlet></router-outlet>
+<app-nabvar></app-nabvar>
+<div [@fadeAnimation]="getRouteAnimation()">
+    <router-outlet></router-outlet>
+  </div>
