--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -99,8 +99,12 @@
       transform-style: preserve-3d;
       transform-origin: center;
       cursor: pointer;
-      transition: 1.5s ease-in-out; 
-  }
+      transition: 1s ease-in-out;
+      -webkit-transition: 1s ease-in-out;
+      -moz-transition: 1s ease-in-out;
+      -ms-transition: 1s ease-in-out;
+      -o-transition: 1s ease-in-out;
+}
 
   .card:hover .card-inner {
       transform: rotateY(180deg);
