--- a/src/app/components/nabvar/nabvar.component.scss
+++ b/src/app/components/nabvar/nabvar.component.scss
@@ -10,35 +10,34 @@
 
 .navbar-brand,
 .nav-link {
-
+  background-color: rgba(0, 0, 0, 0);
   color: #ffffff;
-  transition: color 0.3s ease;
+  transition: color 1 ease;
+  -webkit-transition: color 1 ease;
+  -moz-transition: color 1 ease;
+  -ms-transition: color 1 ease;
+  -o-transition: color 1 ease;
 }
 
 .navbar-brand:hover,
 .nav-link:hover {
- background-color: white;
+ background-color: rgba(255, 255, 255);
  border-radius: 20px;
  color: #000000;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  -ms-border-radius: 20px;
  -o-border-radius: 20px;
+ transition: background-color 2s ease, color 2s ease;
+ -webkit-transition: background-color 2s ease, color 2s ease;
+ -moz-transition: background-color 2s ease, color 2s ease;
+ -ms-transition: background-color 2s ease, color 2s ease;
+ -o-transition: background-color 2s ease, color 2s ease;
 }
 .navbar-toggler{
   background-color: #ffffffe0;
 }
-.dropdown-menu,
-.dropdown-item {
-  background-color: rgba(0, 0, 0, 0.0); /* Fondo negro con 80% de opacidad */
-  color: #ffffff;
-}
-.dropdown-item:hover
-{
-  color: #000000;
-  background-color: rgba(255, 255, 255); 
-  border-radius: 20px;
-}
+
 
 .img {
   height: 60px;
