--- a/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
+++ b/src/app/components/nabvar/nuestra-manera/nuestra-manera.component.scss
@@ -78,6 +78,7 @@
 }
 
 .enlargable-image {
+  box-shadow: 0 4px 6px rgba(124, 124, 124, 0.4), 0 2px 6px rgba(233, 233, 233, 0.4) !important ; 
   border: 2px solid rgba(232, 232, 232, 0.6); /* Borde del mismo color que la línea */
   border-radius: 15px; /* Bordes redondeados */
   max-width: 600px;
